Fix overflow issue in Safari

--- a/src/components/Chats.css
+++ b/src/components/Chats.css
@@ -1,8 +1,8 @@
 .Chats {
   flex: 1 1 0;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-start; */
   width: 100%;
   overflow-y: scroll;
   padding: 0 1rem;
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
-  margin: 1rem 0;
+  margin: 1.5rem 0;
 }
 
 .Chat-container.from-me {
